Fix collapse read_more buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
     font-style: normal;
 
 } */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Rakkas&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lato&display=swap');
 
 body, html {
     background: url(/static/images/darkbg.jpg) no-repeat center center fixed;
@@ -17,7 +17,7 @@ body, html {
     scroll-behavior: initial;
 }
 
-p { font-style: 'Montserrat', sans-serif;
+p { font-style: 'Lato', sans-serif;
     font-size: 1.6em;
     color: #000;
 } 
@@ -44,7 +44,7 @@ p { font-style: 'Montserrat', sans-serif;
 #cb-navbar--collapse li {
     max-width: max-content;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 1.2em;
 }
 #cb-navbar--collapse li span {
@@ -65,7 +65,7 @@ footer {
 
 footer a span {
     color: #f2f2f2;
-    font-family: Montserrat, sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 1.6em;
 }
 
@@ -83,12 +83,12 @@ footer a span:hover, footer i:hover {
 /*------------------------------------- Home page styling */
 
 .cb-home h1 {
-    font-family: 'Rakkas', sans-serif;
+    font-family: 'Indie Flower', sans-serif;
     color: #fafafa;
-    font-size: 9em;
+    font-size: 8em;
     background-color: #208347;
     margin: .5em 0 .5em 0;
-    padding: .1em;
+    padding: .25em 0 .25em 0;
     border-radius: .1em;
 }
 
@@ -96,7 +96,7 @@ footer a span:hover, footer i:hover {
     background-color:rgba(0,0,0, 0.6);
     color: #f2f2f2;
     padding: .5em;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 2em;
     text-decoration: none;
 
@@ -184,7 +184,7 @@ footer a span:hover, footer i:hover {
     background-color: rgba(0,0,0, 0.6);
     padding: .2em;
     border-radius: .2em;
-    font-family: 'Rakkas',sans-serif;
+    font-family: 'Indie Flower',sans-serif;
     font-size: 2em;
 }
 
@@ -281,13 +281,13 @@ i {
 
 h3 {
     color: #208347;
-    font-family: 'Rakkas';
+    font-family: 'Indie Flower';
     font-size: 2.5em;
 }
 
 h5 {
     color:#992C1D;
-    font-family: 'Rakkas', sans-serif;
+    font-family: 'Indie Flower', sans-serif;
     font-size: 2em;
 }
 
@@ -310,7 +310,7 @@ a:hover {
 }
 
 .cb-login h3 {
-    font-family: 'Rakkas', sans-serif;
+    font-family: 'Indie Flower', sans-serif;
     font-size: 2em;
 }
 
@@ -375,7 +375,7 @@ a:hover {
     display: inline-block;
     padding: 0 .5em 0 .5em;
     margin-top:1em ;
-    font-family: 'Rakkas';
+    font-family: 'Indie Flower';
     font-size: 2.5em;
     background-color: rgba(0,0,0, 0.6);
 }
@@ -492,7 +492,7 @@ a:hover {
     color: #208347;
     font-size: 1.2em;
     width: 100%;
-    font-family: Montserrat, sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .cb-btn--home:hover {
@@ -554,7 +554,7 @@ a:hover {
 }
 /*------------------------------------------Forms styling */
 .cb-accept--content h5{
-    font-family: 'Rakkas';
+    font-family: 'Indie Flower';
     font-size: 3em;
 }
 .cb-accept--content {
@@ -571,7 +571,7 @@ a:hover {
     height: 100%;
     font-size: 1.5em;
     color: #208347;
-    font-family: 'Rakkas';
+    font-family: 'Indie Flower';
 } 
 
 .input-descriptions {
@@ -607,7 +607,7 @@ a:hover {
 }
 
 .cb-profile h3{
-    font-family: 'Rakkas', sans-serif;
+    font-family: 'Indie Flower', sans-serif;
     font-size: 3em;
 }
 
@@ -629,13 +629,13 @@ a:hover {
 
 @media screen and (max-width: 350px) {
     .cb-home h1 {
-        font-size: 3em;
+        font-size: 4em;
     }
     .cb-home h3 {
         font-size: 1.6em;
     }
-    footer span {
-        font-size: 1.6em;
+    footer a span {
+        font-size: 1em;
     }
     .cb-profile span{
         font-size: 0.8em;
